# vkdanu

./: .gitignore  README.md  pyproject.toml
asyncio/: calculator.py
chatgpt_tg_search_ask/: build_knowledge_base.ipynb  tg_with_gpt.ipynb
practical_task_1/: fake_news.html  fake_news.ipynb
practical_task_2/: task_2.html  task_2.ipynb
practical_task_3/: click_by_cpc_model_data_preparation_v4.ipynb  click_by_cpc_model_train_without_mlflow_v4.ipynb  click_for_day.csv  mlflow_clicks_for_day.ipynb
quiz_bot_serverless_yandex/: database.py  handlers.py  requirements.txt  service.py  sql.txt  tb_webhook.py  webhook_template.txt
task16_3/: blur_face.ipynb
telegram_bot/: Dockerfile  README.md  constants.py  db_functions.py  main.py  process_questions.py  quiz_bot.db  quiz_data_file.py
