[tool.poetry]
name = "vkdanu"
version = "0.1.0"
description = ""
authors = ["Vyacheslav <danubise@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
notebook = "^7.1.0"
pandas = "^2.2.1"
tfidfinheritvectorizer = "^0.1"
scikit-learn = "^1.4.1.post1"
plotly = "^5.19.0"
nltk = "^3.8.1"
xgboost = "^2.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
