[tool.poetry]
name = "vkdanu"
version = "0.1.0"
description = ""
authors = ["vyacheslav <<88930987+vyacheslav-ku@users.noreply.github.com>>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
notebook = "^7.1.2"
plotly = "^5.20.0"
xgboost = "^2.0.3"
scikit-learn = "1.3.2"
ipywidgets = "^8.1.2"
widgetsnbextension = "^4.0.10"
shap = "0.44.1"
lightgbm = "^4.3.0"
aiogram = "^3.6.0"
aiosqlite = "^0.20.0"
openai = "^1.30.1"
mwclient = "^0.10.1"
mwparserfromhell = "^0.6.6"
tiktoken = "^0.7.0"
opencv-python = "^4.9.0.80"
gdown = "^5.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
